Closed Bug 1030338 Opened 10 years ago Closed 10 years ago

Assertion failure: !aOther.IsNull() (Cannot compute with aOther null value), at ../../dist/include/mozilla/TimeStamp.h:281 when stopping a webrtc call

Categories

(Core :: WebRTC, defect)

33 Branch
All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: standard8, Assigned: jesup)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

I've had this a couple of times today, stopping a webrtc call on my Mac. I'm running a debug nightly build based on:

changeset:   190252:e86b84998b18
parent:      190185:fa6a7a2f476c
parent:      190251:9130ef564653
user:        Wes Kocher <wkocher@mozilla.com>
date:        Mon Jun 23 18:55:45 2014 -0700
summary:     merge b2g-inbound to m-c a=merge

Top of console stack:

[Parent 31552] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111: file /Users/mark/tb/central/mozilla/dom/events/ContentEventHandler.cpp, line 110
[Parent 31552] WARNING: MediaPipeline Transport failed. This is not properly cleaned up yet: file /Users/mark/tb/central/mozilla/media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp, line 290
Assertion failure: !aOther.IsNull() (Cannot compute with aOther null value), at ../../dist/include/mozilla/TimeStamp.h:281
mozilla::runnable_args_nm_2<void (*)(tag_nsresult, nsAutoPtr<sipcc::RTCStatsQuery>), tag_nsresult, nsAutoPtr<sipcc::RTCStatsQuery> >::Run()+0x00000026 [/Users/mark/tb/central/mozilla/objdir-ff/dist/NightlyDebug.app/Contents/MacOS/XUL +0x0084C546]
nsThread::ProcessNextEvent(bool, bool*)+0x0000050C [/Users/mark/tb/central/mozilla/objdir-ff/dist/NightlyDebug.app/Contents/MacOS/XUL +0x000B2ADC]
NS_ProcessPendingEvents(nsIThread*, unsigned int)+0x0000003F [/Users/mark/tb/central/mozilla/objdir-ff/dist/NightlyDebug.app/Contents/MacOS/XUL +0x0001E81F]
nsBaseAppShell::NativeEventCallback()+0x00000077 [/Users/mark/tb/central/mozilla/objdir-ff/dist/NightlyDebug.app/Contents/MacOS/XUL +0x01221997]

From Mac's reporter:

Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   XUL                           	0x0000000101520ae9 mozilla::TimeStamp::operator-(mozilla::TimeStamp const&) const + 169 (TimeStamp.h:280)
1   XUL                           	0x0000000101d41ba0 mozilla::dom::StoreLongTermICEStatisticsImpl_m(tag_nsresult, nsAutoPtr<sipcc::RTCStatsQuery>) + 3168 (WebrtcGlobalInformation.cpp:444)
2   XUL                           	0x0000000101d43546 mozilla::runnable_args_nm_2<void (*)(tag_nsresult, nsAutoPtr<sipcc::RTCStatsQuery>), tag_nsresult, nsAutoPtr<sipcc::RTCStatsQuery> >::Run() + 38 (nsAutoPtr.h:73)
3   XUL                           	0x00000001015a9adc nsThread::ProcessNextEvent(bool, bool*) + 1292 (nsThread.cpp:766)
4   XUL                           	0x000000010151581f NS_ProcessPendingEvents(nsIThread*, unsigned int) + 63 (nsThreadUtils.cpp:210)
5   XUL                           	0x0000000102718997 nsBaseAppShell::NativeEventCallback() + 119 (nsBaseAppShell.cpp:99)
6   XUL                           	0x00000001026d1d4e nsAppShell::ProcessGeckoEvents(void*) + 190 (nsAppShell.mm:373)
7   com.apple.CoreFoundation      	0x00007fff90aa8b31 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17
8   com.apple.CoreFoundation      	0x00007fff90aa851d __CFRunLoopDoSources0 + 445
9   com.apple.CoreFoundation      	0x00007fff90acb7f5 __CFRunLoopRun + 789
10  com.apple.CoreFoundation      	0x00007fff90acb0e2 CFRunLoopRunSpecific + 290
11  com.apple.HIToolbox           	0x00007fff88a27eb4 RunCurrentEventLoopInMode + 209
12  com.apple.HIToolbox           	0x00007fff88a27c52 ReceiveNextEventCommon + 356
13  com.apple.HIToolbox           	0x00007fff88a27ae3 BlockUntilNextEventMatchingListInMode + 62
14  com.apple.AppKit              	0x00007fff8919e533 _DPSNextEvent + 685
15  com.apple.AppKit              	0x00007fff8919ddf2 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 128
16  XUL                           	0x00000001026d1246 -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 86 (nsAppShell.mm:127)
17  com.apple.AppKit              	0x00007fff891951a3 -[NSApplication run] + 517
18  XUL                           	0x00000001026d23ea nsAppShell::Run() + 538 (nsCOMPtr.h:662)
19  XUL                           	0x00000001039dc702 nsAppStartup::Run() + 130 (nsAppStartup.cpp:278)
20  XUL                           	0x0000000103986493 XREMain::XRE_mainRun() + 5395 (nsAppRunner.cpp:4011)
21  XUL                           	0x0000000103986b09 XREMain::XRE_main(int, char**, nsXREAppData const*) + 281 (nsAppRunner.cpp:4082)
22  XUL                           	0x0000000103986eb6 XRE_main + 230 (nsAppRunner.cpp:4296)
23  org.mozilla.nightlydebug      	0x00000001000022f9 main + 1945 (nsBrowserApp.cpp:282)
24  org.mozilla.nightlydebug      	0x0000000100001814 start + 52
Attachment #8446343 - Flags: review?(docfaraday)
Comment on attachment 8446343 [details] [diff] [review]
Don't assert or generate bad stats if we go from ICE New->Closed directly

Review of attachment 8446343 [details] [diff] [review]:
-----------------------------------------------------------------

These look like they'll work fine, but I suspect the real bug is bug 1024028 (we can go directly from new->connected or new->failed when the other end is full trickle). Was this failure observed while interoping with Chrome, by chance? If not, I'd like to know more.
Attachment #8446343 - Flags: review?(docfaraday) → review+
One of the two crashes I had was definitely interoping with Chrome, I'm pretty sure the other one was as well.
https://hg.mozilla.org/integration/mozilla-inbound/rev/cc82b52c9a7f
Happens all the time on a failed call with Chrome
Target Milestone: --- → mozilla33
https://hg.mozilla.org/mozilla-central/rev/cc82b52c9a7f
Assignee: nobody → rjesup
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: