Bug 1030338: Don't assert or generate bad stats if we go from ICE New->Closed directly r=bwc